src/test/ui/issues/issue-58856-1.stderr
error: expected one of `)`, `,`, or `:`, found `>`
  --> $DIR/issue-58856-1.rs:2:14
   |
LL |     fn b(self>
   |         -    ^ help: `)` may belong here
   |         |
   |         unclosed delimiter

error: aborting due to previous error

