src/test/ui/issues/issue-58856-1.rs
impl A {
    fn b(self>
    //~^ ERROR expected one of `)`, `,`, or `:`, found `>`
}

fn main() {}
